all the colors of the wind

--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -32,7 +32,7 @@ layout: default.njk
     <details class="mt-8" open>
       <summary class="mb-4">Table of Contents</summary>
       <aside
-        class="border border-solid border-secondary-on-light px-4 py-6 rounded bg-slate-900"
+        class="border border-solid border-secondary-on-light px-4 py-6 rounded bg-black bg-opacity-25"
       >
         {{ content | toc | safe }}
       </aside>
