--- a/index.njk
+++ b/index.njk
@@ -1,6 +1,7 @@
 ---
 layout: default.njk
 title: About Me
+description: Hi! I'm Karly. I'm a Senior Software Engineer and UX Designer at Ledger Works in St. Louis. I design and build web apps, mobile apps, and some pretty sweet charcuterie boards.
 ---
 
 <div class="about-me px-6 max-w-5xl mx-auto pb-64">
