--- a/posts/index.njk
+++ b/posts/index.njk
@@ -4,6 +4,7 @@ title: Writing
 eleventyImport:
   collections: ["post"]
 published: Sept 18, 2024
+description: How-to articles on various specific problems I've solved.
 ---
 
 <div class="px-6 max-w-5xl mx-auto">
