add cloudwatch metric article

--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -53,16 +53,14 @@ layout: default.njk
     <div class="px-6 max-w-5xl mx-auto relative -top-11">
       {{ content | safe }}
     </div>
-
-    <svg
-      class="block mt-40 fill-main-bg w-full relative -bottom-1"
-      viewBox="0 0 1440 101"
-    >
-      <path
-        d="M1440,92.59v8.41H0v-28.54C22.09,43.93,65.96,19.23,124.38,7.39c105.81-21.49,181.23,7.89,256.34,37.15,14.7,5.73,29.38,11.45,44.28,16.78,97.25,34.71,213.71,46.47,329.88,27.04,46.87-7.87,91.25-18.61,135.63-29.35h0c40.56-9.81,81.12-19.63,123.61-27.26,138.63-24.85,292.78-11.19,393.88,41.82,11.49,6.02,22.16,12.38,32,19.02Z"
-        fill-rule="evenodd"
-        stroke-width="0"
-      />
-    </svg>
   </div>
+  <svg
+    class="block fill-article-bg w-full relative -top-4"
+    viewBox="0 0 1067 192"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      d="M0 0H1067V123C1067 123 974.762 101.222 887 100C752.185 98.1233 638.744 139.752 504 135C381.909 130.694 297.08 81.3857 175 86C96.6296 88.9622 0 123 0 123V0Z"
+    />
+  </svg>
 </article>
