--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -16,11 +16,11 @@
   }
 
   .text-secondary-on-dark {
-    @apply: text-slate-300;
+    @apply text-slate-300;
   }
 
   .text-action-on-light {
-    @apply text-sky-600;
+    @apply text-blue-600;
   }
 
   .text-action-on-dark {
@@ -28,7 +28,7 @@
   }
 
   .bg-action-on-light {
-    @apply bg-sky-600;
+    @apply bg-blue-600;
   }
 
   .bg-action-on-dark {
@@ -40,11 +40,11 @@
   }
 
   .border-action-on-dark {
-    @apply: border-sky-300;
+    @apply border-sky-300;
   }
 
   .border-action-on-light {
-    @apply border-sky-600;
+    @apply border-blue-600;
   }
 
   .border-primary-on-light {
@@ -52,7 +52,7 @@
   }
 
   .border-primary-on-dark {
-    @apply: border-slate-200;
+    @apply border-slate-200;
   }
 
   .border-secondary-on-light {
@@ -150,7 +150,7 @@ a {
 .about-me a,
 header a,
 footer a {
-  @apply fancy-hover-on-light;
+  @apply fancy-hover;
 }
 
 /* Code blocks */
@@ -209,7 +209,7 @@ code:not([class*="language-"]) {
 }
 
 .article-content a {
-  @apply text-action-on-light;
+  @apply text-action-on-light fancy-hover-on-light;
 }
 
 .article-content h1,
@@ -235,6 +235,16 @@ code:not([class*="language-"]) {
 .article-content ol {
   list-style-type: decimal;
   padding-inline-start: 2rem;
+  line-height: 1.8;
+}
+
+.article-content ul {
+  list-style-type: disc;
+  padding-inline-start: 1.5rem;
+}
+
+.article-content blockquote {
+  @apply border-l-4 border-slate-800 pl-4 py-4 my-4 bg-slate-400 bg-opacity-25;
 }
 
 /* Table of Contents */
@@ -246,10 +256,6 @@ code:not([class*="language-"]) {
 
 .toc li {
   margin-top: 0.25rem;
-}
-
-.article-content a {
-  @apply fancy-hover-on-light;
 }
 
 .toc a {
