--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -71,10 +71,10 @@
       {% block content %} {{ content | safe }} {% endblock %}
     </main>
     <footer
-      class="text-secondary flex items-center justify-between p-8 max-w-7xl mx-auto w-full"
+      class="text-secondary md:flex items-center justify-between p-8 max-w-7xl mx-auto w-full"
     >
-      <p>&copy; 2024 Karly Nelson</p>
-      <p>
+      <p class="text-center mb-4 md:mb-0 md:text-left flex-none">&copy; 2024 Karly Nelson</p>
+      <p class="text-center md:text-right">
         Colophon: Built with <a href="https://www.11ty.dev/">Eleventy</a>,
         <a href="https://tailwindcss.com/">Tailwind CSS</a>,
         <a href="https://alpinejs.dev/">AlpineJS</a>,
