--- a/posts/index.njk
+++ b/posts/index.njk
@@ -6,7 +6,7 @@ eleventyImport:
 description: How-to articles on various specific problems I've solved.
 ---
 
-<div class="px-6 max-w-5xl mx-auto">
+<div class="container">
   <div class="mb-12">
     <h1 class="mb-2">Articles</h1>
     <p class="text-secondary-on-dark">
