--- a/index.njk
+++ b/index.njk
@@ -4,7 +4,7 @@ title: About Me
 description: Hi! I'm Karly. I'm a Senior Software Engineer and UX Designer at Ledger Works in St. Louis. I design and build web apps, mobile apps, and some pretty sweet charcuterie boards.
 ---
 
-<div class="about-me px-6 max-w-5xl mx-auto pb-64">
+<div class="about-me container pb-64">
   <h1>Hi! I'm Karly</h1>
   <p class="text-2xl mt-8">
     I'm a Senior Software Engineer and UX Designer at
