--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -91,6 +91,10 @@ body {
   @apply bg-main text-primary-on-dark font-family-basic min-h-screen grid grid-rows-[auto,1fr,auto];
 }
 
+.container {
+  @apply px-6 max-w-5xl mx-auto;
+}
+
 /* Headings */
 
 h1 {
