--- a/search.njk
+++ b/search.njk
@@ -4,7 +4,7 @@ title: Search
 description: Search my site
 ---
 
-<div class="search-page container">
+<div class="search-page container pb-16">
   <h1 class="mb-6">Search</h1>
   <p class="text-secondary-on-dark mb-6">
     Search provided by <a href="https://pagefind.app/">Pagefind</a>
