--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -9,7 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
+      content="width=device-width, initial-scale=1"
     />
     {# Syntax highlighting - See themes at https://unpkg.com/browse/prismjs@1.20.0/themes/ #}
     <link
