--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-layout: default.njk
+layout: layouts/default.njk
 title: About Me
 description: Hi! I'm Karly. I'm a Senior Software Engineer and UX Designer at Ledger Works in St. Louis. I design and build web apps, mobile apps, and some pretty sweet charcuterie boards.
 ---
