--- a/404.njk
+++ b/404.njk
@@ -1,12 +1,15 @@
 ---
 permalink: 404.html
-layout: default.njk
+layout: layouts/default.njk
 ---
 
 <div class="max-w-3xl mx-auto text-center">
   <a class="mt-4" href="/">Karly Nelson</a>
-  <h1 class="text-6xl font-bold mt-40">Oops! <span role="image" aria-label="Sad emoji.">😓</span></h1>
+  <h1 class="text-6xl font-bold mt-40">
+    Oops! <span role="image" aria-label="Sad emoji.">😓</span>
+  </h1>
   <p class="text-2xl mt-8">
-        The page you were looking for either doesn't exist or was deleted.
-      </p>
+    The page you were looking for either doesn't exist or was deleted.
+  </p>
   <a class="mt-6" href="/">Go to home page</a>
+</div>
