--- a/posts/index.njk
+++ b/posts/index.njk
@@ -49,7 +49,7 @@ description: How-to articles on various specific problems I've solved.
           <p class="text-secondary-on-dark font-light text-sm">
             Published: {{post.date | postDateShort}}{% if
             post.data.lastUpdated%} • Updated: {{post.data.lastUpdated |
-            postDate}}{% endif %}
+            postDateShort}}{% endif %}
           </p>
         </div>
       </a>
